# triniBot

./: .gitmodules  README.md  Robot_Controllers.py  ball_tracker.py  balloon_popper.py  client.py  controller.py  controller_vel_tests.py  idle.py  main.py  main.py.save  requirements.txt  tB_gui_client.py  tB_platform_handler.py  tbAnalogSensors.py  tbMotorController.py  tbVision.py  tcpserver.py  thread_tests.py  threadedtcpclient.py  threadedtcpserver.py  triniBotController.py  triniBotMotorController.py  triniBotMotorController.py.save  zmq_publisher.py  zmq_server.py  zmq_subscriber.py
assets/: 8x8_red_angry.xcf  8x8_red_happy.xcf  8x8_red_smiley.xcf
encoders/: Makefile  encoders.ino  encoders.ino.save  encoders.mk.save
encoders/build-cli/: encoders.cpp  encoders.d  encoders.elf  encoders.hex  encoders_old.cpp  encoders_old.d
microcontroller/Basic/: Basic.ino
microcontroller/encoder_nano_001/: encoder_nano_001.ino
microcontroller/encoder_nano_007.ino/: encoder_nano_007.ino.ino
microcontroller/teensy_motorhat_controller/: lib  teensy_motorhat_controller.ino
microcontroller/teensy_motorhat_controller/src/: teensy_motorhat_controller.ino
pclstuff/: CMakeLists.txt  package.xml
pclstuff/src/: pclstuff.cpp
research/: line_follower.py
sense_hat/: SenseLogger.py  climate_control_example.py  humidity_example.py
src/trinibot_core/: CMakeLists.txt  package.xml  pi_envloader.sh
src/trinibot_core/launch/: balltracker.launch
src/trinibot_core/msg/: status.msg
src/trinibot_core/scripts/: tbmotioncontroller.py  tbmotorcontroller.py
tbros/core/: tbMotorController.py  tbVision.py
tbros/devel/: .catkin  .rosinstall  setup.sh
tbros/devel/include/balltracker/: ballcoords.h  command.h
tbros/devel/include/motioncontroller/: status.h
tbros/devel/lib/pkgconfig/: balltracker.pc  motioncontroller.pc  sensehat_publisher.pc
tbros/src/: CMakeLists.txt
tbros/src/balltracker/: .camera_calibration.launch.swp  CMakeLists.txt  balltracker.launch
tbros/src/balltracker/msg/: ballcoords.msg  command.msg
tbros/src/motioncontroller/: CMakeLists.txt  package.xml
tbros/src/motioncontroller/scripts/: motioncontroller_node.py
tbros/src/sensehat_publisher/: CMakeLists.txt  package.xml
tbros/src/sensehat_publisher/scripts/: sensehat_publisher.py
tbros/src/triniBot/: CMakeLists.txt  manifest.xml
tbros/src/trinibot_core/: manifest.xml
trinibot_core/: CMakeLists.txt  laptop_envloader.sh  mainpage.dox  manifest.xml  package.xml  pi_envloader.sh  setup.py  trinibot-dev.requirements
trinibot_core/action/: goto_distance.action  move_trinibot.action
trinibot_core/assets/: 8x8_red_angry.xcf  8x8_red_happy.xcf  8x8_red_smiley.xcf  triniBot_binary.stl  trinibot.urdf  trinibot_materials.xacro
trinibot_core/assets/maps/: room_600x300.yaml
trinibot_core/assets/trinibot/: BATT-BODY_1_Body1_BATT-BODY.stl  BATT-COVER-FRONT_1_Component18_1_Component21_1_Component23_1_Body1_Component23.stl  BATT-COVER-REAR_1_Component51_1_Component52_1_Component53_1_Body1_Component53.stl  BATT-ELECTRONICS_1_Body1_BATT-ELECTRONICS.stl  Camera mount v7_1_Bracket-Left_1_Body1_Bracket-Left.stl  Camera mount v7_1_Bracket-Left_1_Body1_Bracket-Left_1.stl  Camera mount v7_1_Camera-Mount_1_Body1_Camera-Mount.stl  Component77_1_Body1_Component77.stl  Component78_1_Body1_Component78.stl  Component79_1_Body1_Component79.stl  Component80_1_Body1_Component80.stl  Depthsense-mount_1_Body1_Depthsense-mount.stl  FRONT-AXLE_3_Body1_FRONT-AXLE.stl  Harness v5_1_Body11_Harness v5.stl  Harness v5_1_Body1_Harness v5.stl  Hat_1_Body1_Hat.stl  Hat_1_Body1_Hat_2.stl  Hat_1_Body1_Hat_3.stl  Hat_4_Body1_Hat_1.stl  REAR-AXLE-LOWER_2_Component59_1_Body1_Component59.stl  REAR-MOUNT-UPPER_2_Body1_REAR-MOUNT-UPPER.stl  REAR-MOUNT-UPPER_3_Body1_REAR-MOUNT-UPPER_1.stl  TRACK-LEFT_1_Body1_TRACK-LEFT.stl  TRACK-LEFT_1_Body1_TRACK-LEFT_1.stl  Wheel Sprocket_1_Body1_Wheel Sprocket.stl  Wheel Sprocket_1_Body1_Wheel Sprocket_1.stl  Wheel Sprocket_1_Body1_Wheel Sprocket_2.stl  Wheel Sprocket_1_Body1_Wheel Sprocket_3.stl  Wheel Sprocket_1_Body2_Wheel Sprocket.stl  Wheel Sprocket_1_Body2_Wheel Sprocket_1.stl  Wheel Sprocket_1_Body2_Wheel Sprocket_2.stl  Wheel Sprocket_1_Body2_Wheel Sprocket_3.stl  files.txt
trinibot_core/launch/: camera.launch  camera_calibration.launch  launch-roscore-onboot.sh  tbcore.launch  tbcore_local.launch  tblocalization.launch  trinibot_coreservices.launch
trinibot_core/nodes/: tbactiongenerator.py  tbtimesynchronizer.py
trinibot_core/params/: tb_ekf.yaml
trinibot_core/scripts/: moveit_example.py  tbanalogsensors.py  tbballmotionplanner.py  tbballtracker.py  tbimageflip.py  tbkeyboarddriver.py  tbmotioncontroller.py  tbmotorcontroller.py  tbmotorhat.py  tbodocovariance.py  tbplatformtransform.py  tbsensehat.py  tbteleopgui.py  tbtimesynchronizer.py  tbtransformpointcloud.py  tbvelocityramper.py
trinibot_core/settings/: ros-core-launch.service  tbcamcalib.yaml  trinibot.rviz
vision_modules/: ball_seeker_module.py  ball_tracker.py  line_follower.py  line_follower_hough.py  test.py
vision_modules/images/: 640_480_40px_vertical_scribble.xcf
zmq-based/: tB_platform_handler.py  tbGui.py
(+40 files in other folders)
