<package format="2">
  <name>

     trinibot_core

  </name>
  <version>
	 1.0.0
  </version>
  <description>
	  The trinibot package is the root package for all trinbot functionality
  </description>

  <maintainer email="keshav.chintamani@gmail.com">keshav chintamani</maintainer>
  <license>Proprietary</license>
  <url>http://ros.org/wiki/trinibot_core</url>
  <buildtool_depend>catkin</buildtool_depend> 

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>genpy</depend>
  <depend>genmsg</depend>
  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>tf</depend>
  <exec_depend>message_runtime</exec_depend> 
</package>


