<?xml version="1.0"?>
<package>
  <name>trinbot_core</name>
  <version>0.0.0</version>
  <description>Core packages for Trinibot</description>

   <maintainer email="keshav.chintamani@gmail.com">Keshav Chintamani</maintainer>
  <license>Custom</license>

  <url>http://wiki.ros.org</url>
  <author>Keshav</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_mgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>