<package>
  <name>sensehat_publisher</name>
  <version>0.0.1</version>
  <description>
	    Test package
  </description>
 <maintainer email="keshav.chintamani@gmail.com">Keshav Chintamani</maintainer>
  <license>BSD</license>

  <url>https://github.com/keshavchintamani/triniBot.git</url>
  <author>Keshav</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_mgs</build_depend>
<build_depend>rospy></build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend> 
  <export>
    <architecture_independent/>
  </export>
</package>
